--- a/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
+++ b/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
@@ -41,13 +41,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Advertencia! se acerca un asteroide a una velocidad de 49 km/s\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "velocidadDeAsteroide = 49\n",
+        "if velocidadDeAsteroide > 25:\n",
+        "    print(\"¡Advertencia! se acerca un asteroide a una velocidad de \" + str(velocidadDeAsteroide) + \" km/s\")"
       ]
     },
     {
@@ -59,13 +70,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sin novedades.\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
-        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False"
+        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
+        "velocidadDeAsteroide = 19\n",
+        "if velocidadDeAsteroide > 25:\n",
+        "    print(\"¡Advertencia! se acerca un asteroide a una velocidad de \" + str(velocidadDeAsteroide) + \" km/s\")\n",
+        "elif velocidadDeAsteroide >= 20:\n",
+        "    print(\"¡Alerta! se puede ver un rayo de luz en el cielo.\")\n",
+        "else:\n",
+        "    print(\"Sin novedades.\")"
       ]
     },
     {
@@ -99,13 +125,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Alerta! un asteroide golpeará la Tierra.\n",
+            "¡Alerta! se puede ver un rayo de luz en el cielo.\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
-        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra."
+        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
+        "tamañoDeAsteroide = 40\n",
+        "velocidadDeAsteroide = 25\n",
+        "if tamañoDeAsteroide > 25 and tamañoDeAsteroide < 1000:\n",
+        "    print(\"¡Alerta! un asteroide golpeará la Tierra.\")\n",
+        "if velocidadDeAsteroide > 25:\n",
+        "    print(\"¡Alerta! el asteroide se acerca a una velocidad de \" + str(velocidadDeAsteroide) + \" km/s\")\n",
+        "elif velocidadDeAsteroide >= 20:\n",
+        "    print(\"¡Alerta! se puede ver un rayo de luz en el cielo.\")\n",
+        "else:\n",
+        "    print(\"Sin novedades.\")"
       ]
     },
     {
@@ -124,9 +169,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Alerta! ¡Un asteroide se acerca a velocidades peligrosas!\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
@@ -148,9 +201,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Nada que ver aquí!\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
@@ -174,9 +235,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Look up! ¡Hay una luz mágica en el cielo!\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
@@ -217,8 +286,7 @@
       "name": "conda-env-py37_default-py"
     },
     "kernelspec": {
-      "display_name": "py37_default",
-      "language": "python",
+      "display_name": "Python 3.9.10 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -231,7 +299,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
