--- a/Módulo 4 - Cadenas/Módulo4Katas.ipynb
+++ b/Módulo 4 - Cadenas/Módulo4Katas.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -37,11 +37,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Interesting facts about the Moon', \" The Moon is Earth's only satellite\", ' There are several interesting facts about the Moon and how it affects life here on Earth', ' \\nOn average, the Moon moves 4cm away from the Earth every year', ' This yearly drift is not significant enough to cause immediate effects on Earth', ' The highest daylight temperature of the Moon is 127 C', '']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Añade el código necesario"
+        "# Añade el código necesario\n",
+        "oraciones = text.split('.')\n",
+        "print(oraciones)"
       ]
     },
     {
@@ -53,11 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Define las palabras pista: average, temperature y distance suenan bien"
+        "# Define las palabras pista: average, temperature y distance suenan bien\n",
+        "average = \"average\"\n",
+        "temperature = \"temperature\"\n",
+        "distance = \"distance\""
       ]
     },
     {
@@ -69,11 +82,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " \n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            " The highest daylight temperature of the Moon is 127 C\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo for para recorrer la cadena"
+        "# Ciclo for para recorrer la cadena\n",
+        "for item in oraciones:\n",
+        "    if (average in item) or (temperature in item) or (distance in item):\n",
+        "        print(item)\n",
+        "        "
       ]
     },
     {
@@ -85,11 +112,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " \n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            " The highest daylight temperature of the Moon is 127 Celsius\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo para cambiar C a Celsius"
+        "# Ciclo para cambiar C a Celsius\n",
+        "for item in oraciones:\n",
+        "    if (average in item) or (temperature in item) or (distance in item):\n",
+        "        if 'C' in item:\n",
+        "            item = item.replace('C', 'Celsius')\n",
+        "        print(item)"
       ]
     },
     {
@@ -121,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -140,11 +182,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Datos De Gravedad Sobre Moon'"
+            ]
+          },
+          "execution_count": 53,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Creamos el título"
+        "# Creamos el título\n",
+        "titulo = f'datos de gravedad sobre {name}'.title()\n",
+        "titulo"
       ]
     },
     {
@@ -156,11 +211,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos la plantilla"
+        "# Creamos la plantilla\n",
+        "plantilla = f\"\"\"{'-'*33}\n",
+        "Nombre de platena: {planet}\n",
+        "Gravedad en {name}: {gravity*1000} m/s2\n",
+        "\"\"\""
       ]
     },
     {
@@ -172,11 +231,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Datos De Gravedad Sobre Moon\n",
+            "---------------------------------\n",
+            "Nombre de platena: Earth\n",
+            "Gravedad en Moon: 1.6199999999999999 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Unión de ambas cadenas"
+        "# Unión de ambas cadenas\n",
+        "print(f\"\"\"{titulo}\n",
+        "{plantilla}\"\"\")"
       ]
     },
     {
@@ -195,12 +268,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "---------------------------------\n",
+            "Nombre de platena: Earth\n",
+            "Gravedad en Moon: 1.6199999999999999 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Comprueba la plantilla\n",
-        "# print(nombre_plantilla)"
+        "name = \"Ganimedes\"\n",
+        "gravity = 0.00143 # in kms\n",
+        "planet = \"Marte\"\n",
+        "print(plantilla)"
       ]
     },
     {
@@ -212,11 +299,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Nueva plantilla"
+        "# Nueva plantilla\n",
+        "nueva_plantilla = \"\"\"{0}\n",
+        "Nombre de planeta: {1}\n",
+        "Gravedad en {2}: {3} m/s2\n",
+        "\"\"\""
       ]
     },
     {
@@ -228,11 +319,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "---------------------------------\n",
+            "Nombre de planeta: Marte\n",
+            "Gravedad en Ganimedes: 1.4300000000000002 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Pista: print(nueva_plantilla.format(variables))"
+        "# Pista: print(nueva_plantilla.format(variables))\n",
+        "print(nueva_plantilla.format('-'*33, planet, name, gravity*1000))"
       ]
     },
     {
@@ -251,9 +354,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Interesting facts about the Moon',\n",
+              " \"The Moon is Earth's only satellite\",\n",
+              " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
+              " '\\nOn average, the Moon moves 4cm away from the Earth every year',\n",
+              " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
+              " 'The highest daylight temperature of the Moon is 127 C.']"
+            ]
+          },
+          "execution_count": 59,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Divide el texto\n",
         "text_parts = text.split('. ')\n",
@@ -262,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -272,9 +391,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            "The highest daylight temperature of the Moon is 127 C.\n"
+          ]
+        }
+      ],
       "source": [
         "# Ciclo for para recorrer la cadena\n",
         "for sentence in text_parts:\n",
@@ -286,9 +415,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            "The highest daylight temperature of the Moon is 127 Celsius.\n"
+          ]
+        }
+      ],
       "source": [
         "# Ciclo para cambiar C a Celsius\n",
         "for sentence in text_parts:\n",
@@ -307,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -320,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -330,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -343,9 +482,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Marte  \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Unión de ambas cadenas\n",
         "template = f\"\"\"{title.title()} \n",
@@ -356,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -368,9 +518,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Marte  \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Comprobamos la plantilla\n",
         "print(hechos)"
@@ -378,9 +539,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 0.00143 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "new_template = \"\"\"\n",
         "Datos de Gravedad sobre: {nombre}\n",
@@ -393,9 +567,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Pista: print(nueva_plantilla.format(variables))\n",
         "print(new_template.format(nombre=nombre, planeta=planeta, gravedad=gravedad*1000))"
@@ -418,14 +605,13 @@
   ],
   "metadata": {
     "interpreter": {
-      "hash": "502cd6c3b6c9e666d195e1caff9d64ea12bf644e547a4c8fae84812082c54b6f"
+      "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
     "kernel_info": {
       "name": "conda-env-py37_default-py"
     },
     "kernelspec": {
-      "display_name": "py37_default",
-      "language": "python",
+      "display_name": "Python 3.9.10 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -438,7 +624,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
