--- a/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
+++ b/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
@@ -24,12 +24,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Crear variables para almacenar las dos distancias\n",
-        "# ¡Asegúrate de quitar las comas!"
+        "# ¡Asegúrate de quitar las comas!\n",
+        "distanciaSolATierra = 149597870\n",
+        "distanciaSolAJupiter = 778547200"
       ]
     },
     {
@@ -43,11 +45,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "628949330\n",
+            "390577533.93\n"
+          ]
+        }
+      ],
       "source": [
-        "# Calcular la distancia entre planetas"
+        "# Calcular la distancia entre planetas\n",
+        "distanciaEntrePlanetasKm = abs(distanciaSolATierra - distanciaSolAJupiter)\n",
+        "print(distanciaEntrePlanetasKm)\n",
+        "distanciaEntrePlanetasMillas = distanciaEntrePlanetasKm * 0.621\n",
+        "print(distanciaEntrePlanetasMillas)\n"
       ]
     },
     {
@@ -90,12 +105,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Almacenar las entradas del usuario\n",
-        "#Pista: variable = input(\"¿Cuál es tu nombre?\")"
+        "#Pista: variable = input(\"¿Cuál es tu nombre?\")\n",
+        "entrada1 = input(\"Introduzca la distancia del Sol para el primer planeta en KM\")\n",
+        "entrada2 = input(\"Introduzca la distancia del Sol para el segundo planeta en KM\")"
       ]
     },
     {
@@ -108,11 +125,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Convierte las cadenas de ambos planetas a números enteros"
+        "# Convierte las cadenas de ambos planetas a números enteros\n",
+        "distanciaSolAPlaneta1 = int(entrada1)\n",
+        "distanciaSolAPlaneta2 = int(entrada2)"
       ]
     },
     {
@@ -126,14 +145,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "50300000\n",
+            "31236300.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Realizar el cálculo y determinar el valor absoluto\n",
+        "distanciaEntrePlanetasKm = abs(distanciaSolAPlaneta1 - distanciaSolAPlaneta2)\n",
+        "print(distanciaEntrePlanetasKm)\n",
         "\n",
-        "\n",
-        "# Convertir de KM a Millas"
+        "# Convertir de KM a Millas\n",
+        "distanciaEntrePlanetasMillas = distanciaEntrePlanetasKm * 0.621;\n",
+        "print(distanciaEntrePlanetasMillas)"
       ]
     },
     {
@@ -171,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -184,9 +215,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "628949330\n",
+            "390577533.93\n"
+          ]
+        }
+      ],
       "source": [
         "# Calcular la distancia entre planetas\n",
         "\n",
@@ -206,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -217,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -228,9 +268,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "50300000\n",
+            "31236300.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Realizar el cálculo y determinar el valor absoluto\n",
         "distance_km = second_planet - first_planet\n",
@@ -260,14 +309,13 @@
   ],
   "metadata": {
     "interpreter": {
-      "hash": "502cd6c3b6c9e666d195e1caff9d64ea12bf644e547a4c8fae84812082c54b6f"
+      "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
     "kernel_info": {
       "name": "conda-env-py37_default-py"
     },
     "kernelspec": {
-      "display_name": "py37_default",
-      "language": "python",
+      "display_name": "Python 3.9.10 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -280,7 +328,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
