--- a/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
+++ b/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
@@ -27,11 +27,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Mercury', 'Venus', 'Earh', 'Mars', 'Jupiter', 'Neptune', 'Saturn', 'Unanus']\n",
+            "8\n"
+          ]
+        }
+      ],
       "source": [
-        "# Creamos la lista planets y la mostramos"
+        "# Creamos la lista planets y la mostramos\n",
+        "planets = [\"Mercury\", \"Venus\", \"Earh\", \"Mars\", \"Jupiter\", \"Neptune\", \"Saturn\", \"Unanus\"]\n",
+        "print(planets)\n",
+        "print(len(planets))"
       ]
     },
     {
@@ -43,11 +55,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Pluto'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Agregamos a plutón y mostramos el último elemento"
+        "# Agregamos a plutón y mostramos el último elemento\n",
+        "planets.append(\"Pluto\")\n",
+        "planets[-1]"
       ]
     },
     {
@@ -77,12 +102,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Lista de planetas\n",
-        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']"
+        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']\n"
       ]
     },
     {
@@ -96,11 +121,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Solicitamos el nombre de un planeta *Pista:  input()*"
+        "# Solicitamos el nombre de un planeta *Pista:  input()*\n",
+        "planet = input(\"Introduce a planet name\")"
       ]
     },
     {
@@ -113,11 +139,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Busca el planeta en la lista"
+        "# Busca el planeta en la lista\n",
+        "idxFound = planets.index(planet.title())\n",
+        "idxFound"
       ]
     },
     {
@@ -131,11 +170,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Mercury', 'Venus', 'Earth', 'Mars']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más cercanos al sol"
+        "# Muestra los planetas más cercanos al sol\n",
+        "closest = planets[0:idxFound]\n",
+        "print(closest)"
       ]
     },
     {
@@ -149,11 +198,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Saturn', 'Neptune']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más lejanos al sol"
+        "# Muestra los planetas más lejanos al sol\n",
+        "farthest = planets[idxFound + 1:]\n",
+        "print(farthest)"
       ]
     },
     {
@@ -172,9 +231,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "There are 8 planets\n"
+          ]
+        }
+      ],
       "source": [
         "# Creamos la lista planets y la mostramos\n",
         "\n",
@@ -185,9 +252,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pluto is the last planet\n"
+          ]
+        }
+      ],
       "source": [
         "# Agregamos a plutón y mostramos el último elemento\n",
         "\n",
@@ -205,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -216,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -226,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -237,9 +312,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Here are the planets closer than Venus\n",
+            "['Mercury']\n"
+          ]
+        }
+      ],
       "source": [
         "# Muestra los planetas más cercanos al sol\n",
         "\n",
@@ -249,9 +333,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Here are the planets further than Venus\n",
+            "['Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']\n"
+          ]
+        }
+      ],
       "source": [
         "# Muestra los planetas más lejanos al sol\n",
         "\n",
@@ -276,10 +369,10 @@
   ],
   "metadata": {
     "interpreter": {
-      "hash": "b8bdd4e700647ba2b08c59e5df8b7da1dcf50a218bcd4c1bcd9b3dc92e8788e5"
+      "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
     "kernelspec": {
-      "display_name": "Python 3.9.1 64-bit",
+      "display_name": "Python 3.9.10 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -292,7 +385,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
