--- a/Módulo 7 - Estructuras de control/Módulo7Katas.ipynb
+++ b/Módulo 7 - Estructuras de control/Módulo7Katas.ipynb
@@ -25,11 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Declara dos variables"
+        "# Declara dos variables\n",
+        "new_planet = ''\n",
+        "planets = []"
       ]
     },
     {
@@ -47,11 +49,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Escribe el ciclo while solicitado"
+        "# Escribe el ciclo while solicitado\n",
+        "\n",
+        "while new_planet.lower() != 'done':\n",
+        "    if new_planet: \n",
+        "        planets.append(new_planet)\n",
+        "    new_planet = input(\"Ingresa un nombre de planeta o 'done' para terminar.\")"
       ]
     },
     {
@@ -85,11 +92,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mercury\n",
+            "Venus\n",
+            "Earth\n",
+            "Mars\n",
+            "Jupiter\n",
+            "Saturn\n",
+            "Uranus\n",
+            "Neptune\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu ciclo for para iterar en una lista de planetas"
+        "# Escribe tu ciclo for para iterar en una lista de planetas\n",
+        "for planet in planets:\n",
+        "    print(planet)\n"
       ]
     },
     {
@@ -108,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -120,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -141,9 +165,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mercury\n",
+            "Venus\n",
+            "Earth\n",
+            "Mars\n",
+            "Jupiter\n",
+            "Saturn\n",
+            "Uranus\n",
+            "Neptune\n"
+          ]
+        }
+      ],
       "source": [
         "# Escribe tu ciclo for para iterar en una lista de planetas\n",
         "\n",
@@ -173,8 +212,7 @@
       "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit",
-      "language": "python",
+      "display_name": "Python 3.9.10 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -187,7 +225,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
