--- a/Módulo 8 - Administrar datos con diccionarios/Módulo8Katas.ipynb
+++ b/Módulo 8 - Administrar datos con diccionarios/Módulo8Katas.ipynb
@@ -40,11 +40,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Crea un diccionario llamado planet con los datos propuestos"
+        "# Crea un diccionario llamado planet con los datos propuestos\n",
+        "planet = {\n",
+        "    'name': 'Mars',\n",
+        "    'moons': 2\n",
+        "}"
       ]
     },
     {
@@ -56,11 +60,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The planet \"Mars\" has 2 moons\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra el nombre del planeta y el número de lunas que tiene."
+        "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
+        "print(\"\"\"The planet \"{0}\" has {1} moons\"\"\".format(planet.get('name'), planet['moons']))"
       ]
     },
     {
@@ -84,11 +97,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'name': 'Mars', 'moons': 2, 'circumference (km)': {'polar': 6752, 'equatorial': 6792}, 'circumference': {'polar': 6752, 'equatorial': 6792}}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agrega la clave circunferencia con los datos proporcionados previamente"
+        "# Agrega la clave circunferencia con los datos proporcionados previamente\n",
+        "circunferencia = {\n",
+        "        'polar': 6752, \n",
+        "        'equatorial': 6792\n",
+        "    }\n",
+        "planet.update({'circumference': circunferencia})\n",
+        "print(planet);"
       ]
     },
     {
@@ -100,11 +127,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The polar circumference of \"Mars\" is 6752\n"
+          ]
+        }
+      ],
       "source": [
-        "# Imprime el nombre del planeta con su circunferencia polar."
+        "# Imprime el nombre del planeta con su circunferencia polar.\n",
+        "print(f\"\"\"The polar circumference of \"{planet['name']}\" is {planet['circumference']['polar']}\"\"\")"
       ]
     },
     {
@@ -131,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,11 +200,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "214\n"
+          ]
+        }
+      ],
       "source": [
-        "# Añade el código para determinar el número de lunas."
+        "# Añade el código para determinar el número de lunas.\n",
+        "total_moons = 0;\n",
+        "for n in planet_moons.values():\n",
+        "    total_moons += n\n",
+        "print(total_moons)"
       ]
     },
     {
@@ -180,11 +228,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agrega el código para contar el número de lunas. "
+        "# Agrega el código para contar el número de lunas. \n",
+        "average_moons = total_moons / len(planet_moons.values())\n",
+        "print(average_moons)"
       ]
     },
     {
@@ -203,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -217,9 +275,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mars has 2 moons\n"
+          ]
+        }
+      ],
       "source": [
         "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
         "\n",
@@ -228,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -242,9 +308,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mars has a polar circumference of 6752\n"
+          ]
+        }
+      ],
       "source": [
         "# Imprime el nombre del planeta con su circunferencia polar.\n",
         "\n",
@@ -260,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -277,9 +351,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
         "# Calcula el total_moons agregando todas las lunas\n",
         "# Almacena su valor en una variable llamada total_moons\n",
@@ -317,7 +399,7 @@
       "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit",
+      "display_name": "Python 3.9.10 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -330,7 +412,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
