--- a/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -29,11 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para leer 3 tanques de combustible y muestre el promedio\n"
+        "# Función para leer 3 tanques de combustible y muestre el promedio\n",
+        "def informeCombustible(tanque1, tanque2, tanque3):\n",
+        "    promedio = tanque1 + tanque2 + tanque3 / 3\n",
+        "    return f\"Tanque 1: {tanque1}%\\nTanque 2: {tanque2}%\\nTanque 3: {tanque3}\\nPromedio: {promedio}%\"\n"
       ]
     },
     {
@@ -45,12 +48,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tanque 1: 20%\n",
+            "Tanque 2: 40%\n",
+            "Tanque 3: 80\n",
+            "Promedio: 86.66666666666667%\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))"
+        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
+        "print(informeCombustible(20, 40, 80))"
       ]
     },
     {
@@ -62,11 +77,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "27.25\n"
+          ]
+        }
+      ],
       "source": [
-        "# Función promedio "
+        "# Función promedio \n",
+        "def promedio(*args):\n",
+        "    return sum(args) / len(args)\n",
+        "\n",
+        "print(promedio(14,15,26,54))"
       ]
     },
     {
@@ -78,11 +105,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tanque 1: 20%\n",
+            "Tanque 2: 40%\n",
+            "Tanque 3: 80%\n",
+            "Promedio: 46.666666666666664%\n"
+          ]
+        }
+      ],
       "source": [
-        "# Actualiza la función"
+        "# Actualiza la función\n",
+        "def informeCombustible(tanque1, tanque2, tanque3):\n",
+        "    promedioCombustible = promedio(tanque1, tanque2, tanque3)\n",
+        "    return f\"Tanque 1: {tanque1}%\\nTanque 2: {tanque2}%\\nTanque 3: {tanque3}%\\nPromedio: {promedioCombustible}%\"\n",
+        "\n",
+        "print(informeCombustible(20, 40, 80))"
       ]
     },
     {
@@ -109,11 +152,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\"\n",
+            "        Hora de prelanzamiento: 18 horas\n",
+            "        Destino: Jupiter\n",
+            "        Tiempo de vuelo: 1200 minutes\n",
+            "        Tanque externo: 20%\n",
+            "        Tanque interno: 40%\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
+        "def informeMision(horaPrelanzamiento, destino, tiempoDeVuelo, tanqueExterno, tanqueInterno):\n",
+        "    return f\"\"\"\"\n",
+        "        Hora de prelanzamiento: {horaPrelanzamiento} horas\n",
+        "        Destino: {destino}\n",
+        "        Tiempo de vuelo: {tiempoDeVuelo} minutes\n",
+        "        Tanque externo: {tanqueExterno}%\n",
+        "        Tanque interno: {tanqueInterno}%\n",
+        "    \"\"\"\n",
+        "\n",
+        "print(informeMision(18, \"Jupiter\", 1200, 20, 40))"
       ]
     },
     {
@@ -125,11 +192,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\"\n",
+            "        Hora de prelanzamiento: 18 horas\n",
+            "        Destino: Jupiter\n",
+            "        Tiempo de vuelo: 7000 minutes\n",
+            "        Combustible disponible: 90%\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función de reporte considerando lo anterior"
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def informeMision(horaPrelanzamiento, destino, *minutes, **fuel_reservoirs) :    \n",
+        "    return f\"\"\"\"\n",
+        "        Hora de prelanzamiento: {horaPrelanzamiento} horas\n",
+        "        Destino: {destino}\n",
+        "        Tiempo de vuelo: {sum(minutes)} minutes\n",
+        "        Combustible disponible: {sum(fuel_reservoirs.values())}%\n",
+        "    \"\"\"\n",
+        "\n",
+        "print(informeMision(18, \"Jupiter\", 1200, 1000, 4800, tanque1=20, tanque2=40, tanque3=30))"
       ]
     },
     {
@@ -141,11 +230,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Hora de prelanzamiento: 18 horas\n",
+            "    Destino: Jupiter\n",
+            "    Tiempo de vuelo: 7000 minutes\n",
+            "    tanque1: 20%\n",
+            "tanque2: 40%\n",
+            "tanque3: 30%\n",
+            "\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función"
+        "# Escribe tu nueva función\n",
+        "def informeTanques(tanques):\n",
+        "    informe = \"\"\n",
+        "    for key, value in tanques.items():\n",
+        "        informe += f\"{key}: {value}%\\n\"\n",
+        "    return informe;\n",
+        "\n",
+        "def informeMision(horaPrelanzamiento, destino, *minutes, **fuel_reservoirs) :    \n",
+        "    return f\"\"\"\n",
+        "    Hora de prelanzamiento: {horaPrelanzamiento} horas\n",
+        "    Destino: {destino}\n",
+        "    Tiempo de vuelo: {sum(minutes)} minutes\n",
+        "    {informeTanques(fuel_reservoirs)}\n",
+        "    \"\"\"\n",
+        "\n",
+        "print(informeMision(18, \"Jupiter\", 1200, 1000, 4800, tanque1=20, tanque2=40, tanque3=30))"
       ]
     },
     {
@@ -164,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -182,9 +302,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fuel Report:\n",
+            "    Total Average: 78.33333333333333%\n",
+            "    Main tank: 80%\n",
+            "    External tank: 70%\n",
+            "    Hydrogen tank: 85% \n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
         "print(generate_report(80, 70, 85))"
@@ -192,9 +325,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "82.0"
+            ]
+          },
+          "execution_count": 58,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Función promedio \n",
         "def average(values):\n",
@@ -208,9 +352,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fuel Report:\n",
+            "    Total Average: 78.0%\n",
+            "    Main tank: 88%\n",
+            "    External tank: 76%\n",
+            "    Hydrogen tank: 70% \n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Actualiza la función\n",
         "def generate_report(main_tank, external_tank, hydrogen_tank):\n",
@@ -234,9 +391,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 65 minutes\n",
+            "    Total fuel left: 500000 gallons\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
         "\n",
@@ -252,9 +421,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 76 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Escribe tu nueva función de reporte considerando lo anterior\n",
         "\n",
@@ -270,9 +451,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 74 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    main tank --> 300000 gallons left\n",
+            "external tank --> 200000 gallons left\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Escribe tu nueva función\n",
         "\n",
@@ -308,10 +503,10 @@
   ],
   "metadata": {
     "interpreter": {
-      "hash": "205095b8b86ea82a021a8fc2ffba2b3bc9f8d0be25999901963b225939f75778"
+      "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit ('tmp': conda)",
+      "display_name": "Python 3.9.10 64-bit",
       "name": "python3"
     },
     "language_info": {
@@ -324,7 +519,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
